# BobCan

./: .gitignore  BobCan.sln  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
BobCan/: BobCan.vcxproj  Main.cpp
Resources/: Bob.json  Boss.json
